--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=Shital@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.jpa.properties.hibernate.dialet=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
@@ -17,3 +17,4 @@ spring.servlet.multipart.max-request-size=10MB
 #path config
 
 user.profile.image.path=images/users/
+product.image.path=images/products/
